# PCE_G14_KOSMOS

./: .dockerignore  .gitignore  Dockerfile  KosmosExpert.spec  KosmosExpert_PyQt6.py  LICENSE  README.md  auto_mask_sam.py  cp1_config.json  cp3_config.json  extract_frames.py  main.py  pyproject.toml  pytest.ini  requirements.txt  tchai_config.json  train_unet.py
assets/: style.qss
components/: EventForm.py  EventRow.py  EventsTab.py  Explorateur_dossier.py  apercu_video.py  clip_editor_dialog.py  common_metadata.py  commons.py  correction.py  correction_improved.py  courbe_tonale.py  detached_player.py  explorateur.py  explorateur_improved.py  fenetre_campagne.py  formulaire_metadonnees.py  histogramme.py  lecteur.py  lecteur_improved.py  metadonnees.py  navbar.py  outils_lodification.py  outils_modification.py  recording_preview_dialog.py  short_preview_dialog.py  specific_metadata.py  video_list.py
controllers/: __init__.py  accueil_controller.py  extraction_controller.py  importation_controller.py  telechargement_controller.py  tri_controller.py  video_list_controller.py  video_metadata_controller.py
ia_module/: __init__.py  fish_detection.py  ia_controller.py  ia_view.py  unet_inference.py
kosmos_processing/: __init__.py  algos_correction.py
models/: __init__.py  app_model.py  campaign_model.py  media_model.py  metadata_model.py  video_list_model.py  video_metadata_model.py
notebooks/: fish_segmentation_training.ipynb
src/: main.py
tests/: conftest.py  test_accueil_controller.py  test_apercu_video.py  test_app_model_unit.py  test_correction.py  (+16 more)
(+22 files in other folders)
